# rocq-of-rust

./: .gitignore  .gitmodules  README.md  run_tests.py
RocqOfRust/: .gitignore  CLAUDE.md  M.v  Makefile  RocqOfRust.v  _RocqProject  blacklist.txt  generate_ink_example.sh  of_json.py  rocq-of-rust.opam
RocqOfRust/alloc/: alloc.v  borrow.v  boxed.v  fmt.v  raw_vec.v  rc.v  slice.v  str.v  string.v  sync.v  task.v
RocqOfRust/alloc/boxed/: convert.v  iter.v  thin.v
RocqOfRust/alloc/collections/: mod.v  (+1 more)
RocqOfRust/alloy_primitives/: aliases.v  common.v  lib.v  sealed.v
RocqOfRust/bytes/: bytes.v  bytes_mut.v  lib.v  loom.v
RocqOfRust/core/: any.v  arch.v  ascii.v  asserting.v  bool.v  borrow.v  cell.v  clone.v  cmp.v  default.v  error.v  escape.v  hint.v  marker.v  option.v  panic.v  panicking.v  pin.v  primitive_docs.v  random.v  range.v  result.v  time.v  ub_checks.v  unit.v
RocqOfRust/experiments/: MonadExperiments.v
RocqOfRust/lib/: lib.v
RocqOfRust/links/: M.v
RocqOfRust/p_token/: entrypoint.v
RocqOfRust/pinocchio/: instruction.v  lib.v  log.v  memory.v  pubkey.v  syscalls.v
RocqOfRust/proofs/: M.v  integer.v
RocqOfRust/revm/: types.v
RocqOfRust/ruint/: add.v  aliases.v  base_convert.v  bit_arr.v  bits.v  bytes.v  cmp.v  div.v  fmt.v  from.v  gcd.v  lib.v  log.v  macros.v  modular.v  mul.v  pow.v  root.v  special.v  string.v  utils.v
RocqOfRust/simulate/: M.v
RocqOfRust/simulations/: integer.v
RocqOfRust/simulations_legacy/: M.v  integer.v
RocqOfRust/token-2022/: instruction.v  lib.v  onchain.v  pod.v  pod_instruction.v  processor.v
(+1594 files in other folders)
