opam-version: "2.0"
name: "rocq-of-rust"
version: "0.1"
synopsis: "Rocq of Rust"
description: """
Formal verification for Rust by translation to the proof system Rocq
"""
maintainer: "Guillaume Claret <dev@clarus.me>"
authors: [
  "Formal Land <contact@formal.land>"
]
license: "MIT"
homepage: "https://formal.land/docs/rocq-of-rust/introduction"
bug-reports: "https://github.com/formal-land/rocq-of-rust/issues"
dev-repo: "git+https://github.com/formal-land/rocq-of-rust.git"
depends: [
  "coq-coqutil"
  "coq-hammer"
  "rocq-core" {>= "9.0" & < "9.1"}
  "rocq-smpl"
  "rocq-stdlib"
]
build: [
  [make]
]
